--- a/index.html
+++ b/index.html
@@ -2,4 +2,14 @@
 <head>
  <title>welcome to my web-app</title>
  <link href="css/styles.css" rel="stylesheet" type="text/css">  
+ <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 </head>
+<body>
+ <div class="container">
+ <div class="jumbotron"> 
+  <h1>Akan names webpage</h1>
+  <p> a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. </p>
+  
+ </div>
+ </div>
+</body>
