--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <div class="container">
  <div class="jumbotron"> 
   <h1>Akan names webpage</h1>
-  <p> a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. </p>
+  <p>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. </p>
   
  </div>
  </div>
