--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
  <div class="jumbotron"> 
   <h1>Akan names webpage</h1>
   <p>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. </p>
-  
+ </div>
+ <div class="gender">
+ <p>Gender</p>
+  <input type="radio" name="gender" value="male"> Male<br>
+  <input type="radio" name="gender" value="female"> Female<br>
  </div>
  </div>
 </body>
