--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!Doctype html>
 <head>
- <title>welcome to my web-app</title>
- <link href="css/styles.css" rel="stylesheet" type="text/css">  
+ <title>welcome to my web-app</title>  
  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+ <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
  <div class="container">
@@ -10,10 +10,9 @@
   <h1>Akan names webpage</h1>
   <p>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. </p>
  </div>
- <div class="gender">
- <p>Gender</p>
+ <form>
   <input type="radio" name="gender" value="male"> Male<br>
   <input type="radio" name="gender" value="female"> Female<br>
- </div>
+ </form>
  </div>
 </body>
