i made changes on h1

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 <body>
  <div class="container">
  <div class="jumbotron"> 
-  <h1>Akan names webpage</h1>
+  <h1><bold>Akan names webpage</bold></h1>
   <p>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. </p>
  </div>
  <form>
-  <input type="radio" name="gender" value="male"> Male<br>
+  <input id="day"  type="Day" placeholder="Day"><br>
+  <input id="month"  type="Month" placeholder="Month"><br>
+  <input id="year"  type="Year" placeholder="Year"><br>
   <input type="radio" name="gender" value="female"> Female<br>
+  <input type="radio" name="gender" value="male"> Male<br>
  </form>
  </div>
 </body>
