i linked a javascript.js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <title>welcome to my web-app</title>  
  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
  <link href="css/styles.css" rel="stylesheet" type="text/css">
+ <script src="js/javascript.js"></script>
 </head>
 <body>
  <div class="container">
