i added onclick button

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
  <div class="container">
  <div class="jumbotron"> 
   <h1><bold>Akan names webpage</bold></h1>
-  <p>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. </p>
+  <p><strong>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.</strong> </p>
  </div>
- <form>
-  <input id="day"  type="Day" placeholder="Day"><br>
-  <input id="month"  type="Month" placeholder="Month"><br>
-  <input id="year"  type="Year" placeholder="Year"><br>
+  <form>
+  <p><em>Birth date info</em></p>
+  <input id="day"   placeholder="D"><br>
+  <input id="month"  placeholder="M"><br>
+  <input id="year"   placeholder="Y"><br>
+  <p><em>Gender</em></p>
   <input type="radio" name="gender" value="female"> Female<br>
   <input type="radio" name="gender" value="male"> Male<br>
- </form>
+  </form>
  </div>
 </body>
