--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p><strong>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.</strong> </p>
  </div>
   <form>
-  <p><em>Birth date info</em></p>
+  <h2><em>Birth date info</em></h2>
   <input id="day"   placeholder="D"><br>
   <input id="month"  placeholder="M"><br>
   <input id="year"   placeholder="Y"><br>
