--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <input id="day"   placeholder="D"><br>
   <input id="month"  placeholder="M"><br>
   <input id="year"   placeholder="Y"><br>
-  <p><em>Gender</em></p>
+  <h3><em>Gender</em></h3>
   <input type="radio" name="gender" value="female"> Female<br>
   <input type="radio" name="gender" value="male"> Male<br>
   <button onclick="">SUBMIT</button>
