--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h3><em>Gender</em></h3>
   <input type="radio" name="gender" value="female"> Female<br>
   <input type="radio" name="gender" value="male"> Male<br>
-  <button onclick="">SUBMIT</button>
+  <button onclick="">ENTER</button>
   </form>
  </div>
 </body>
