--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
  <div class="container">
- <div class="jumbotron"> 
-  <h1><bold>Akan names webpage</bold></h1>
-  <p><strong>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.</strong> </p>
- </div>
+    <div class="jumbotron"> 
+        <h1><bold>Akan names webpage</bold></h1>
+        <p><strong>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.</strong> </p>
+    </div>
   <form>
-  <h2><em>Birth date info</em></h2>
-  <input id="day"   placeholder="D"><br>
-  <input id="month"  placeholder="M"><br>
-  <input id="year"   placeholder="Y"><br>
-  <h3><em>Gender</em></h3>
-  <input type="radio" name="gender" value="female"> Female<br>
-  <input type="radio" name="gender" value="male"> Male<br>
-  <button onclick="">ENTER</button>
+    <h2><bold>Birth date info</bold></h2>
+    <input id="day"   placeholder="D"><br>
+    <input id="month"  placeholder="M"><br>
+    <input id="year"   placeholder="Y"><br>
+    <h3><em>Gender</em></h3>
+    <input type="radio" name="gender" value="female"> Female<br>
+    <input type="radio" name="gender" value="male"> Male<br>
+    <button onclick="">ENTER</button>
   </form>
  </div>
 </body>
