--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!Doctype html>
 <head>
  <title>welcome to my web-app</title>  
- <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+ <link href="bootstrap.css" rel="stylesheet" type="text/css">
  <link href="css/styles.css" rel="stylesheet" type="text/css">
- <script src="js/javascript.js"></script>
+ <script src="javascript.js"></script>
 </head>
 <body>
  <div class="container">
