--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <input type="radio" name="gender" value="male"> Male<br>
   <button onclick="AKAN">ENTER</button>
   <p>the day </p>
+  <p id="result"></p>
   <p>AKAN name</p>
   <p id="AKAN"></p>
  </div>
