--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
  <div class="container">
    <div class="jumbotron"> 
     <h1><bold>Akan names webpage</bold></h1>
-   </div>
-   <p><strong>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name.</strong> </p>
-  <form>
-    <h2><bold>Birth date info</bold></h2>
-     <input id="day"   placeholder="D"><br>
-     <input id="month"  placeholder="M"><br>
-     <input id="year"   placeholder="Y"><br>
-     <h3><em>Gender</em></h3>
-     <input type="radio" name="gender" value="female"> Female<br>
-     <input type="radio" name="gender" value="male"> Male<br>
-     <button onclick="AKAN">ENTER</button>
-  </form>
-  <p>the day </p>
-  <p id="result"></p>
-  <p>AKAN name</p>
-  <p id="AKAN"></p>
+    <p><strong>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs<br> their Akan Name.</br></strong> </p>
+    <form>
+     <h2><bold>Birth date info</bold></h2>
+      <input id="day" placeholder="D"><br>
+      <input id="month" placeholder="M"><br>
+      <input id="year" placeholder="Y"><br>
+      <h3><em>Gender</em></h3>
+      <input type="radio" name="gender" value="female"> Female<br>
+      <input type="radio" name="gender" value="male"> Male<br>
+      <button onclick="AKAN">ENTER</button>
+    </form>
+   <p>the day is:</p>
+   <p id="result"></p>
+   <p>Akan name is:</p>
+   <p id="Akan"></p>
+  </div>
  </div>
 </body>
