i made changes on the button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h3><em>Gender</em></h3>
       <input type="radio" name="gender" value="female"> Female<br>
       <input type="radio" name="gender" value="male"> Male<br>
-      <button onclick="birthdates()">ENTER</button>
+      <button onclick="Akan()">ENTER</button>
     <!-- </form> -->
    <p>the day is:</p>
    <p id="result"></p>
